[package]
name = "navigation-mcve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxidized_navigation = "0.1.0"
bevy_prototype_debug_lines = { version = "0.9.0", features = [ "3d" ] }
smooth-bevy-cameras = "0.6.0"

[dependencies.bevy]
version = "0.9.1"
features = [
    "bevy_winit",
    "render",
    "png",
    "x11",
    "animation",
    "serialize",
]

[dependencies.bevy_rapier3d]
version = "0.19.0"
features = [
    "debug-render",
    "simd-nightly",
    "parallel",
    "serde-serialize",
]


[dependencies.bevy_editor_pls]
git = "https://github.com/jakobhellermann/bevy_editor_pls"
rev = "50ea82bf08289bfe9fcf8a4f024d67d575f15548"
